test/tests/compiler/5_local_variables/valid/empty_function_body.plx
pub fn main(none) i32 { 0 }
