test/tests/compiler/5_local_variables/invalid_semantics/extra_credit/undeclared_postfix_decr.plx
pub fn main(none) i32 {
    a--
    return 0
}
